# dj_gitlab

./: .example.env  .gitignore  db.sqlite3  manage.py  pyproject.toml
gola_game/: settings.py  urls.py  wsgi.py
oauth/: client.py  middleware.py  urls.py  views.py
