[tool.poetry]
name = "gola_game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-gitlab = "^1.6"
django = "^2.1"
authlib = "^0.10.0"
python-dotenv = {version = "^0.9.1",optional = true}

[tool.poetry.dev-dependencies]
ipython = "^7.1"

[tool.poetry.extras]
pydotenv = ["python-dotenv"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
